Bug 132247 - line breaks in AIM not sent correctly
Summary: line breaks in AIM not sent correctly
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: ICQ and AIM Plugins (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-08-11 09:57 UTC by Richard Homonnai
Modified: 2006-12-02 12:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
sent and received message (15.28 KB, image/png)
2006-08-11 09:58 UTC, Richard Homonnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Homonnai 2006-08-11 09:57:10 UTC
Version:           0.12.1 (using KDE 3.5.4, Gentoo)
Compiler:          gcc version 3.4.6 (Gentoo 3.4.6-r1, ssp-3.4.5-1.0, pie-8.7.9)
OS:                Linux (i686) release 2.6.17-gentoo-r4-richWORK-HIGHMEM

This always happens when chatting with a friend thru AIM and sending a link in a message:

The newline is stripped, and the whole message is interpreted as link.
Therefore it gets unusable.

See the attached picture.
Comment 1 Richard Homonnai 2006-08-11 09:58:23 UTC
Created attachment 17337 [details]
sent and received message

this should describe the matter clearly
Comment 2 Richard Homonnai 2006-09-06 11:32:03 UTC
I have found something. At "normal" newlinkes coming from contacts, it looks like this:

---
hi 
---

If you cannot see it (I can't in here, but in Kopete): it's 0x00.

I would assume it is some bug which has to do with UTF-8 maybe?
Comment 3 Roman Jarosz 2006-12-02 12:22:53 UTC
SVN commit 609808 by rjarosz:

Fix bug 132247: Line breaks in AIM not sent correctly.

AIM only recognises <BR> tag and not <BR />.

BUG: 132247



 M  +2 -0      aimaccount.cpp  
 M  +2 -0      aimcontact.cpp  


--- branches/KDE/3.5/kdenetwork/kopete/protocols/oscar/aim/aimaccount.cpp #609807:609808
@@ -173,6 +173,8 @@
     //30- (and any I missed) are size 7
     s.replace ( QRegExp ( QString::fromLatin1("<font ptsize=\"[^\"]*\">")),QString::fromLatin1("<font size=\"7\">"));
 
+    s.replace ( QRegExp ( QString::fromLatin1("<br[ /]*>")), QString::fromLatin1("<br>") );
+
     kdDebug(14190) << k_funcinfo << "sending "
         << s << endl;
 
--- branches/KDE/3.5/kdenetwork/kopete/protocols/oscar/aim/aimcontact.cpp #609807:609808
@@ -438,6 +438,8 @@
 	//30- (and any I missed) are size 7
 	s.replace ( QRegExp ( QString::fromLatin1("<font ptsize=\"[^\"]*\">")),QString::fromLatin1("<font size=\"7\">"));
 
+	s.replace ( QRegExp ( QString::fromLatin1("<br[ /]*>")), QString::fromLatin1("<br>") );
+
 	kdDebug(14190) << k_funcinfo << "sending "
 		<< s << endl;