Fix bug 132247: Line breaks in AIM not sent correctly.

AIM only recognises <BR> tag and not <BR />.

BUG: 132247


svn path=/branches/KDE/3.5/kdenetwork/kopete/; revision=609808