protocols/oscar/aim/aimaccount.cpp
@@ -173,6 +173,8 @@ void AIMMyselfContact::sendMessage( Kopete::Message& message, Kopete::ChatSessio
     //30- (and any I missed) are size 7
     s.replace ( QRegExp ( QString::fromLatin1("<font ptsize=\"[^\"]*\">")),QString::fromLatin1("<font size=\"7\">"));
 
+    s.replace ( QRegExp ( QString::fromLatin1("<br[ /]*>")), QString::fromLatin1("<br>") );
+
     kdDebug(14190) << k_funcinfo << "sending "
         << s << endl;
 
